crates/biome_cli/tests/snapshots/main_cases_markdown/check_markdown_runs_assist_on_embeds.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write file.md
```

## `biome.json`

```json
{
  "markdown": {
    "analyzeEmbeds": true
  }
}
```

## `file.md`

```md
# Embeds

```js
import { a, b } from "./module.js";

export { a, b };
```

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
