crates/biome_cli/tests/snapshots/main_cases_markdown/format_and_write_markdown_files.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome format --write file.md
```

## `file.md`

```md
# Heading

## Section

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
