crates/biome_cli/tests/snapshots/main_cases_markdown/format_markdown_files_with_prose_wrap_cli_option.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome format --write --md-formatter-line-width 40 --md-formatter-prose-wrap always file.md
```

## `file.md`

```md
This is a long paragraph with enough
words to exceed the configured line
width and require wrapping.

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
